--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,28 @@
 <resources>
-    <string name="app_name">SEM4-ANDProject</string>
+    <string name="app_name">Do It</string>
+    <string name="facebook_app_id">801213454162850</string>
+    <string name="fb_login_protocol_scheme">fb801213454162850</string>
+    <string name="title_activity_side_navigation">SideNavigation</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+
+    <string-array name="strings">
+        <item>dd/mm/yyyy</item>
+        <item>mm/dd/yyyy</item>
+        <item>yyyy/mm/dd</item>
+    </string-array>
+
+    <string name="msg_token_fmt"></string>
+    <string name="channel_name">channel name</string>
+    <string name="channel_description">channel description</string>
+
+
 </resources>
